- implementovany trackball, ale este sa to volako trase pri velkom rozliseni :D => treba vyriesit - uz nepouzivam QWindow, ale presiel som na QOpenGLWidget (co je v Qt 5.4 ekvivalent pre QGLWidget) - renderovanie som dal do triedy Renderer

--- a/PGP_shaders.qrc
+++ b/PGP_shaders.qrc
@@ -1,6 +1,10 @@
 <RCC>
     <qresource prefix="/">
-        <file>src/opengl/volume_renderer.vert</file>
-        <file>src/opengl/volume_renderer.frag</file>
+        <file>src/opengl/debug_volume_renderer.vert</file>
+        <file>src/opengl/debug_volume_renderer.frag</file>
+        <file>src/opengl/texture_volume_renderer.vert</file>
+        <file>src/opengl/texture_volume_renderer.frag</file>
+        <file>src/opengl/wire_box.vert</file>
+        <file>src/opengl/wire_box.frag</file>
     </qresource>
 </RCC>
