--- a/PGP_shaders.qrc
+++ b/PGP_shaders.qrc
@@ -6,5 +6,7 @@
         <file>src/opengl/texture_volume_renderer.frag</file>
         <file>src/opengl/wire_box.vert</file>
         <file>src/opengl/wire_box.frag</file>
+        <file>src/opengl/rectangle.vert</file>
+        <file>src/opengl/rectangle.frag</file>
     </qresource>
 </RCC>
