--- a/src/main_window.ui
+++ b/src/main_window.ui
@@ -21,7 +21,7 @@
        <widget class="VolumeViewer" name="volumeViewer" native="true"/>
       </item>
       <item>
-       <layout class="QVBoxLayout" name="verticalLayout" stretch="1,0,0">
+       <layout class="QVBoxLayout" name="verticalLayout" stretch="1,0,0,0,0,0">
         <item>
          <widget class="QPushButton" name="pbLoadModel">
           <property name="text">
@@ -33,6 +33,27 @@
          <widget class="QPushButton" name="pbToggleRenderer">
           <property name="text">
            <string>Toggle Renderer</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pbDumpTF">
+          <property name="text">
+           <string>Dump Transfer Function</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pbSaveTF">
+          <property name="text">
+           <string>Save Transfer Function</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pbLoadTF">
+          <property name="text">
+           <string>Load Transfer Function</string>
           </property>
          </widget>
         </item>
