Zapinanie/Vypisanie bounding box z gui.

--- a/src/main_window.ui
+++ b/src/main_window.ui
@@ -190,14 +190,11 @@
            </item>
           </layout>
           <zorder>verticalSpacer</zorder>
-          <zorder>lblOptionsCustomDetailLevel</zorder>
           <zorder>cbOptionsAutoSubsampling</zorder>
           <zorder>rbOptionsTextureRenderer</zorder>
           <zorder>rbOptionsRayCastingRenderer</zorder>
-          <zorder>sliderOptionsCustomDetailLevel</zorder>
           <zorder>cbOptionsDisplayBBox</zorder>
           <zorder>gbOptionsCustomDetail</zorder>
-          <zorder>sliderOptionsCustomDetailLevel</zorder>
          </widget>
         </item>
        </layout>
@@ -230,8 +227,6 @@
         </widget>
        </item>
       </layout>
-      <zorder>transferFuncEditor</zorder>
-      <zorder>transferFuncEditor</zorder>
      </widget>
     </item>
    </layout>
@@ -288,6 +283,7 @@
    <container>1</container>
    <slots>
     <slot>toggleRenderer()</slot>
+    <slot>setDisplayBBox(bool)</slot>
    </slots>
   </customwidget>
   <customwidget>
@@ -504,6 +500,22 @@
     <hint type="destinationlabel">
      <x>456</x>
      <y>309</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>cbOptionsDisplayBBox</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>volumeViewer</receiver>
+   <slot>setDisplayBBox(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>811</x>
+     <y>350</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>361</x>
+     <y>226</y>
     </hint>
    </hints>
   </connection>
